--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -44,7 +44,9 @@
         "a = 5\n",
         "b = 10\n",
         "c = a + b\n",
-        "print(c)"
+        "print(c)\n",
+        "\n",
+        "print(\"if you're seeing this you're so gay !!!!!!\")"
       ]
     },
     {
@@ -86,7 +88,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.4"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
